k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations: #higher level configuration for the ingress object
    kubernetes.io/ingress.class: nginx # telling k8s that we want the nginx project from that url
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-terget: /$1 #like the rule for removing some of the url after the redirection.  
spec:
  rules:
  - http:
      paths:
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: client-cluster-ip-service
            port:
              number: 3000
      - path: /api/?(.*)
        pathType: Prefix
        backend:
          service:
            name: server-cluster-ip-service
            port:
              number: 5000
